--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-lazyload": "^2.3.0",
     "reactstrap": "^6.4.0"
   },
   "keywords": [
