--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-source-prismic": "^2.0.0",
     "prismic-javascript": "^1.5.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
